[tool.poetry]
name = "formulapy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "formulapy" }
]

[tool.poetry.scripts]
formulapy = "formulapy.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
chardet = "^5.0.0"
dacite = "^1.6.0"
black = "^22.10.0"
click = "^8.1.3"
rich = "^12.6.0"
questionary = "^1.10.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
